# FiddleTools

./: .gitignore  MANIFEST.in  README.md  __init__.py  common.js  compare_fiddles.py  fiddle_to_html.py  fiddletools.css  fiddletools.py  fiddletools_dark.css  index.html  pyproject.toml  settings.json
comps/: compare-__fiddle__-_v0.13.4-v0.14.0.html  compare-jam_manifest-_v0.13.4-v0.14.0.html  compare-par_output-_v0.13.4-v0.14.0.html  compare-t2_input-_v0.13.4-v0.14.0.html
fiddletools/: __init__.py  _fiddletools.py
files/: jam_manifest.html  par_output.html  player_asset_parts.html  t2_input.html
